# jetty

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
crates/jetty-app/: Cargo.toml
crates/jetty-app/src/: anim.rs  app.rs  clipboard.rs  config.rs  detached.rs  input.rs  lib.rs  portal_hotkey.rs
crates/jetty-app/tests/: input.rs
crates/jetty-core/src/: lib.rs  pty.rs  snapshot.rs  terminal.rs  theme.rs
crates/jetty-core/tests/: color.rs  pty.rs  scroll.rs  snapshot.rs  theme.rs
crates/jetty-platform/: Cargo.toml
crates/jetty-platform/src/: lib.rs  window.rs
crates/jetty-render/: Cargo.toml
crates/jetty-render/src/: caret_fx.rs  confirm.rs  crt.rs  focus.rs  gpu.rs  help.rs  lib.rs  liquid.rs  mask.rs  menu.rs  panel.rs  phosphor.rs  quad.rs  reveal.rs  scene.rs  tabbar.rs  text.rs  welcome.rs
docs/: global-hotkey.md  perf-budget.md
docs/release-notes/: v0.1.0.md  v0.3.1.md  v0.4.0.md  v0.6.1.md  v0.6.2.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
docs/superpowers/plans/: 2026-06-18-jetty-mvp-foundation.md  2026-06-29-jetty-visual-effects.md
docs/superpowers/specs/: 2026-06-18-jetty-design.md
scripts/: livetest.sh  make-macos-app.sh  selftest.sh  uitest.sh
src/: main.rs
