[package]
name = "jetty-app"
version = "0.2.0"
edition = "2021"

[dependencies]
jetty-core = { path = "../jetty-core" }
jetty-render = { path = "../jetty-render" }
jetty-platform = { path = "../jetty-platform" }
winit = "0.30"
pollster = "0.4"
wgpu = "29.0"
png = "0.17"
arboard = "3.6.1"
global-hotkey = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
# Live perf-HUD CPU% sampling. OS-portable / DE-independent (no hand-rolled
# /proc or mach). Minimal feature set: only the `system` module (processes/CPU),
# with disk/network/component/user probes disabled to keep the build light.
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# Native Wayland global summon shortcut via the XDG GlobalShortcuts portal
# (`org.freedesktop.portal.GlobalShortcuts`). Linux-only: portals do not exist on
# macOS, which keeps the `global-hotkey` F9 path. ashpd talks to the *generic*
# freedesktop portal (no KDE/GNOME-specific API), satisfying the DE-independence
# rule. Each portal is feature-gated, so `global_shortcuts` must be named
# explicitly; `async-io` (not the default `tokio`) keeps the dep tree lean — zbus
# underneath is pure-Rust, so no new system/CI build deps. The worker is driven by
# `async_io::block_on` and consumes the `Activated` stream via `futures-util`.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", default-features = false, features = ["async-io", "global_shortcuts"] }
async-io = "2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
