[package]
name = "jetty-app"
version = "0.3.1"
edition = "2021"

[dependencies]
jetty-core = { path = "../jetty-core" }
jetty-render = { path = "../jetty-render" }
jetty-platform = { path = "../jetty-platform" }
winit = "0.30"
pollster = "0.4"
wgpu = "29.0"
png = "0.17"
arboard = "3.6.1"
global-hotkey = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
# Live perf-HUD CPU% sampling. OS-portable / DE-independent (no hand-rolled
# /proc or mach). Minimal feature set: only the `system` module (processes/CPU),
# with disk/network/component/user probes disabled to keep the build light.
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
